# F2L_Recovery

./: CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: draw.cpp.F1E3C576C5DE5C6B.idx  draw.hpp.42C348D0EDCB1220.idx  main.cpp.995D10D7B8256837.idx  move.hpp.AFA4A0079D5AFFEF.idx  rubik.hpp.DFECDA2FE13A01E5.idx  solver.cpp.B2F6CAE89D5D346A.idx
.github/workflows/: cmake-single-platform.yml
src/: draw.cpp  draw.hpp  main.cpp  move.hpp  rubik.cpp  rubik.hpp  solver.hpp  solver_2.hpp
